feat: add CookieConsent component with localization and styling; update dependencies and configuration

--- a/src/locales/base/ar-SA.json
+++ b/src/locales/base/ar-SA.json
@@ -29,5 +29,9 @@
   "get-started-by-editing": "ابدأ بالتحرير",
   "make": "أنشئ",
   "beautiful": "جميلة",
-  "language": "اللغة"
+  "language": "اللغة",
+  "cookie-consent": "نستخدم ملفات تعريف الارتباط على موقعنا على الويب لنقدم لك تجربة أكثر صلة من خلال تذكر تفضيلاتك وتكرار الزيارات. \nبالنقر",
+  "cookie-policy": "سياسة ملفات تعريف الارتباط.",
+  "accept-all": "قبول كل شيء",
+  "reject": "يرفض"
 }
