--- a/src/locales/base/fr-FR.json
+++ b/src/locales/base/fr-FR.json
@@ -29,5 +29,9 @@
   "get-started-by-editing": "Commencez par éditer",
   "make": "Créez",
   "beautiful": "de beaux",
-  "language": "Langue"
+  "language": "Langue",
+  "cookie-consent": "Nous utilisons des cookies sur notre site Web pour vous offrir l'expérience la plus pertinente en se souvenant de vos préférences et de vos visites. Plus d'info en cliquant",
+  "cookie-policy": "Politique des cookies.",
+  "accept-all": "Accepter tout",
+  "reject": "Rejeter"
 }
