--- a/src/locales/base/he-IL.json
+++ b/src/locales/base/he-IL.json
@@ -29,5 +29,9 @@
   "get-started-by-editing": "התחל על ידי עריכה",
   "make": "צור",
   "beautiful": "מרהיבים",
-  "language": "שפה"
+  "language": "שפה",
+  "cookie-consent": "אנו משתמשים בעוגיות באתר האינטרנט שלנו כדי לתת לך את החוויה הרלוונטית ביותר על ידי זיכרון העדפותיך וביקורים חוזרים. \nעל ידי לחיצה",
+  "cookie-policy": "מדיניות עוגיות.",
+  "accept-all": "קבל את הכל",
+  "reject": "לִדחוֹת"
 }
