--- a/src/locales/base/en-US.json
+++ b/src/locales/base/en-US.json
@@ -29,5 +29,9 @@
   "get-started-by-editing": "Get started by editing",
   "make": "Make",
   "beautiful": "beautiful",
-  "language": "Language"
+  "language": "Language",
+  "cookie-consent": "We use cookies on our website to give you the most relevant experience by remembering your preferences and repeat visits. By                     clicking&nbsp;                     <strong className=\"font-semibold\">\"Accept All\"</strong>, you consent to the use of ALL the cookies. Please read our&nbsp;",
+  "cookie-policy": "Cookie Policy.",
+  "accept-all": "Accept All",
+  "reject": "Reject"
 }
