--- a/src/locales/base/es-ES.json
+++ b/src/locales/base/es-ES.json
@@ -29,5 +29,9 @@
   "get-started-by-editing": "Comienza editando",
   "make": "Crea",
   "beautiful": "hermosos",
-  "language": "Idioma"
+  "language": "Idioma",
+  "cookie-consent": "Utilizamos cookies en nuestro sitio web para brindarle la experiencia más relevante al recordar sus preferencias y repetir visitas. \nAl hacer clic",
+  "cookie-policy": "Política de cookies.",
+  "accept-all": "Aceptar todo",
+  "reject": "Rechazar"
 }
