--- a/src/locales/base/zh-CN.json
+++ b/src/locales/base/zh-CN.json
@@ -29,5 +29,9 @@
   "get-started-by-editing": "从编辑开始",
   "make": "制作",
   "beautiful": "精美的",
-  "language": "语言"
+  "language": "语言",
+  "cookie-consent": "我们在网站上使用Cookie，通过记住您的偏好和重复访问来为您提供最相关的体验。\n通过单击",
+  "cookie-policy": "饼干政策。",
+  "accept-all": "接受全部",
+  "reject": "拒绝"
 }
