--- a/src/locales/base/fr-FR.json
+++ b/src/locales/base/fr-FR.json
@@ -24,14 +24,14 @@
   "heroui-com-homepage": "Page d'accueil heroui.com",
   "powered-by": "Propulsé par",
   "websites-regardless-of-your-design-experience": "sites web quelle que soit votre expérience en design.",
-  "beautiful-fast-and-modern-react-ui-library": "Une bibliothèque UI pour React belle, rapide et moderne.",
+  "beautiful-fast-and-modern-react-ui-library": "Une bibliothèque UI pour React : belle, rapide et moderne.",
   "documentation": "Documentation",
   "get-started-by-editing": "Commencez par éditer",
   "make": "Créez",
   "beautiful": "de beaux",
   "language": "Langue",
-  "cookie-consent": "Nous utilisons des cookies sur notre site Web pour vous offrir l'expérience la plus pertinente en se souvenant de vos préférences et de vos visites. Plus d'info en cliquant",
-  "cookie-policy": "Politique des cookies.",
+  "cookie-consent": "Nous utilisons des cookies sur notre site Web pour vous offrir l'expérience la plus pertinente en se souvenant de vos préférences et de vos visites. Plus d'info en cliquant sur",
+  "cookie-policy": "Politique de cookies.",
   "accept-all": "Accepter tout",
   "reject": "Rejeter"
 }
