feat: implement cookie consent management system with modal UI and localization support

--- a/src/locales/base/ar-SA.json
+++ b/src/locales/base/ar-SA.json
@@ -33,5 +33,6 @@
   "cookie-consent": "نستخدم ملفات تعريف الارتباط على موقعنا على الويب لنقدم لك تجربة أكثر صلة من خلال تذكر تفضيلاتك وتكرار الزيارات. \nبالنقر",
   "cookie-policy": "سياسة ملفات تعريف الارتباط.",
   "accept-all": "قبول كل شيء",
-  "reject": "يرفض"
+  "reject": "يرفض",
+  "cookie-consent-title": "سياسة ملفات تعريف الارتباط"
 }
