--- a/src/locales/base/es-ES.json
+++ b/src/locales/base/es-ES.json
@@ -33,5 +33,6 @@
   "cookie-consent": "Utilizamos cookies en nuestro sitio web para brindarle la experiencia más relevante al recordar sus preferencias y repetir visitas. \nAl hacer clic",
   "cookie-policy": "Política de cookies.",
   "accept-all": "Aceptar todo",
-  "reject": "Rechazar"
+  "reject": "Rechazar",
+  "cookie-consent-title": "Política de cookies"
 }
