--- a/src/locales/base/he-IL.json
+++ b/src/locales/base/he-IL.json
@@ -33,5 +33,6 @@
   "cookie-consent": "אנו משתמשים בעוגיות באתר האינטרנט שלנו כדי לתת לך את החוויה הרלוונטית ביותר על ידי זיכרון העדפותיך וביקורים חוזרים. \nעל ידי לחיצה",
   "cookie-policy": "מדיניות עוגיות.",
   "accept-all": "קבל את הכל",
-  "reject": "לִדחוֹת"
+  "reject": "לִדחוֹת",
+  "cookie-consent-title": "מדיניות עוגיות"
 }
