--- a/src/locales/base/fr-FR.json
+++ b/src/locales/base/fr-FR.json
@@ -33,5 +33,6 @@
   "cookie-consent": "Nous utilisons des cookies sur notre site Web pour vous offrir l'expérience la plus pertinente en se souvenant de vos préférences et de vos visites. Plus d'info en cliquant sur",
   "cookie-policy": "Politique de cookies.",
   "accept-all": "Accepter tout",
-  "reject": "Rejeter"
+  "reject": "Rejeter",
+  "cookie-consent-title": "Politique de cookies"
 }
