fix: refine cookie consent messages for clarity and formatting in localization files

--- a/src/locales/base/he-IL.json
+++ b/src/locales/base/he-IL.json
@@ -30,7 +30,7 @@
   "make": "צור",
   "beautiful": "מרהיבים",
   "language": "שפה",
-  "cookie-consent": "אנו משתמשים בעוגיות באתר האינטרנט שלנו כדי לתת לך את החוויה הרלוונטית ביותר על ידי זיכרון העדפותיך וביקורים חוזרים. \nעל ידי לחיצה",
+  "cookie-consent": "אנו משתמשים בעוגיות באתר האינטרנט שלנו כדי לתת לך את החוויה הרלוונטית ביותר על ידי זיכרון העדפותיך וביקורים חוזרים. על ידי לחיצה",
   "cookie-policy": "מדיניות עוגיות.",
   "accept-all": "קבל את הכל",
   "reject": "לִדחוֹת",
