--- a/src/locales/base/es-ES.json
+++ b/src/locales/base/es-ES.json
@@ -30,7 +30,7 @@
   "make": "Crea",
   "beautiful": "hermosos",
   "language": "Idioma",
-  "cookie-consent": "Utilizamos cookies en nuestro sitio web para brindarle la experiencia más relevante al recordar sus preferencias y repetir visitas. \nAl hacer clic",
+  "cookie-consent": "Utilizamos cookies en nuestro sitio web para brindarle la experiencia más relevante al recordar sus preferencias y repetir visitas. Al hacer clic",
   "cookie-policy": "Política de cookies.",
   "accept-all": "Aceptar todo",
   "reject": "Rechazar",
